--- a/BS-heat/02-TopHat-local.ipynb
+++ b/BS-heat/02-TopHat-local.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:67e9368afd69310bc6aa5bf89803803b69d6aa472aef4b850b99603dd6913491"
+  "signature": "sha256:a52cfe0759152ceecd32fa9907448f6d961fdca4e88c79479073d48b05788f29"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -188,196 +188,18 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "\r\n",
-        "[2014-12-18 14:17:44] Beginning TopHat run (v2.0.13)\r\n",
-        "-----------------------------------------------\r\n",
-        "[2014-12-18 14:17:44] Checking for Bowtie\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\t\t  Bowtie version:\t 2.2.3.0\r\n",
-        "[2014-12-18 14:17:44] Checking for Bowtie index files (genome)..\r\n",
-        "\tFound both Bowtie1 and Bowtie2 indexes.\r\n",
-        "[2014-12-18 14:17:44] Checking for reference FASTA file\r\n",
-        "[2014-12-18 14:17:44] Generating SAM header for test_ref\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[2014-12-18 14:17:45] Preparing reads\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\t left reads: min. length=75, max. length=75, 100 kept reads (0 discarded)\r\n",
-        "\tright reads: min. length=75, max. length=75, 100 kept reads (0 discarded)\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[2014-12-18 14:17:45] Mapping left_kept_reads to genome test_ref with Bowtie2 \r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[2014-12-18 14:17:46] Mapping left_kept_reads_seg1 to genome test_ref with Bowtie2 (1/3)\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[2014-12-18 14:17:46] Mapping left_kept_reads_seg2 to genome test_ref with Bowtie2 (2/3)\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[2014-12-18 14:17:47] Mapping left_kept_reads_seg3 to genome test_ref with Bowtie2 (3/3)\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[2014-12-18 14:17:47] Mapping right_kept_reads to genome test_ref with Bowtie2 \r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[2014-12-18 14:17:48] Mapping right_kept_reads_seg1 to genome test_ref with Bowtie2 (1/3)\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[2014-12-18 14:17:49] Mapping right_kept_reads_seg2 to genome test_ref with Bowtie2 (2/3)\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[2014-12-18 14:17:49] Mapping right_kept_reads_seg3 to genome test_ref with Bowtie2 (3/3)\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[2014-12-18 14:17:50] Searching for junctions via segment mapping\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[2014-12-18 14:17:50] Retrieving sequences for splices\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[2014-12-18 14:17:50] Indexing splices\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Building a SMALL index\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[2014-12-18 14:17:52] Mapping left_kept_reads_seg1 to genome segment_juncs with Bowtie2 (1/3)\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[2014-12-18 14:17:53] Mapping left_kept_reads_seg2 to genome segment_juncs with Bowtie2 (2/3)\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[2014-12-18 14:17:53] Mapping left_kept_reads_seg3 to genome segment_juncs with Bowtie2 (3/3)\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[2014-12-18 14:17:54] Joining segment hits\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[2014-12-18 14:17:54] Mapping right_kept_reads_seg1 to genome segment_juncs with Bowtie2 (1/3)\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[2014-12-18 14:17:54] Mapping right_kept_reads_seg2 to genome segment_juncs with Bowtie2 (2/3)\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[2014-12-18 14:17:55] Mapping right_kept_reads_seg3 to genome segment_juncs with Bowtie2 (3/3)\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[2014-12-18 14:17:55] Joining segment hits\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[2014-12-18 14:17:55] Reporting output tracks\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "-----------------------------------------------\r\n",
-        "[2014-12-18 14:17:56] A summary of the alignment counts can be found in ./tophat_out/align_summary.txt\r\n",
-        "[2014-12-18 14:17:56] Run complete: 00:00:12 elapsed\r\n"
+        "Traceback (most recent call last):\r\n",
+        "  File \"/Volumes/Bay3/Software/tophat-2.0.13.OSX_x86_64/tophat\", line 4088, in <module>\r\n",
+        "    sys.exit(main())\r\n",
+        "  File \"/Volumes/Bay3/Software/tophat-2.0.13.OSX_x86_64/tophat\", line 3867, in main\r\n",
+        "    init_logger(logging_dir + \"tophat.log\")\r\n",
+        "  File \"/Volumes/Bay3/Software/tophat-2.0.13.OSX_x86_64/tophat\", line 284, in init_logger\r\n",
+        "    os.remove(log_fname)\r\n",
+        "OSError: [Errno 16] Resource busy: './tophat_out/logs/tophat.log'\r\n"
        ]
       }
      ],
-     "prompt_number": 22
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -396,7 +218,7 @@
        ]
       }
      ],
-     "prompt_number": 23
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -2594,36 +2416,90 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "\r\n",
-        "[2014-12-18 15:34:15] Beginning TopHat run (v2.0.13)\r\n",
-        "-----------------------------------------------\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[2014-12-18 15:34:15] Checking for Bowtie\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\t\t  Bowtie version:\t 2.2.3.0\r\n",
-        "[2014-12-18 15:34:15] Checking for Bowtie index files (genome)..\r\n",
-        "[2014-12-18 15:34:15] Checking for reference FASTA file\r\n",
-        "[2014-12-18 15:34:15] Generating SAM header for oyster.v9\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[2014-12-18 15:34:28] Preparing reads\r\n"
+        "Traceback (most recent call last):\r\n",
+        "  File \"/Volumes/Bay3/Software/tophat-2.0.13.OSX_x86_64/tophat\", line 4088, in <module>\r\n",
+        "    sys.exit(main())\r\n",
+        "  File \"/Volumes/Bay3/Software/tophat-2.0.13.OSX_x86_64/tophat\", line 3867, in main\r\n",
+        "    init_logger(logging_dir + \"tophat.log\")\r\n",
+        "  File \"/Volumes/Bay3/Software/tophat-2.0.13.OSX_x86_64/tophat\", line 284, in init_logger\r\n",
+        "    os.remove(log_fname)\r\n",
+        "OSError: [Errno 16] Resource busy: './tophat_out/logs/tophat.log'\r\n"
        ]
       }
-     ]
+     ],
+     "prompt_number": 10
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "!tophat2"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "/usr/local/bin/tophat: fork: Resource temporarily unavailable\r\n"
+       ]
+      }
+     ],
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ls /Volumes/Bay3/Software/tophat-2.0.13.OSX_x86_64"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "AUTHORS               \u001b[31mbed_to_juncs\u001b[m\u001b[m*         \u001b[31mjuncs_db\u001b[m\u001b[m*             \u001b[31msamtools_0.1.18\u001b[m\u001b[m*      \u001b[31mtophat2\u001b[m\u001b[m*\r\n",
+        "COPYING               \u001b[31mcontig_to_chr_coords\u001b[m\u001b[m* \u001b[31mlong_spanning_reads\u001b[m\u001b[m*  \u001b[31msegment_juncs\u001b[m\u001b[m*        \u001b[31mtophat_reports\u001b[m\u001b[m*\r\n",
+        "README                \u001b[31mfix_map_ordering\u001b[m\u001b[m*     \u001b[31mmap2gtf\u001b[m\u001b[m*              \u001b[31msra_to_solid\u001b[m\u001b[m*\r\n",
+        "\u001b[31mbam2fastx\u001b[m\u001b[m*            \u001b[31mgtf_juncs\u001b[m\u001b[m*            \u001b[31mprep_reads\u001b[m\u001b[m*           \u001b[31mtophat\u001b[m\u001b[m*\r\n",
+        "\u001b[31mbam_merge\u001b[m\u001b[m*            \u001b[31mgtf_to_fasta\u001b[m\u001b[m*         \u001b[31msam_juncs\u001b[m\u001b[m*            \u001b[31mtophat-fusion-post\u001b[m\u001b[m*\r\n"
+       ]
+      }
+     ],
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "cp /Volumes/Bay3/Software/tophat-2.0.13.OSX_x86_64/tophat2 /usr/local/bin/"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "!tophat2"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "/usr/local/bin/tophat: fork: Resource temporarily unavailable\r\n"
+       ]
+      }
+     ],
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
