--- a/Cg/BS-heat/02-TopHat-local.ipynb
+++ b/Cg/BS-heat/02-TopHat-local.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a52cfe0759152ceecd32fa9907448f6d961fdca4e88c79479073d48b05788f29"
+  "signature": "sha256:32ede4cb27bf113a66ac234528fa6f23a10076671dfa8f09c0ca12f550da2a5d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -95,6 +95,14 @@
       }
      ],
      "prompt_number": 2
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "New header dkajf"
+     ]
     },
     {
      "cell_type": "code",
