--- a/util/SQLShare-beta.ipynb
+++ b/util/SQLShare-beta.ipynb
@@ -79,7 +79,9 @@
    },
    "outputs": [],
    "source": [
-    "-d \"[sqlshare@uw.edu].[periodic_table]\" -o periodic.csv"
+    "!python /Applications/bioinfo/sqlshare-pythonclient/tools/fetchdata.py \\\n",
+    "-d \"[sr320@washington.edu].[GO_to_GOslim]\" \\\n",
+    "-o /Users/sr320/data-genomic/tentacle/GO_to_GOslim"
    ]
   },
   {
