--- a/Cg/OA/OA-wfu-data-check.ipynb
+++ b/Cg/OA/OA-wfu-data-check.ipynb
@@ -165,6 +165,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "head: /Volumes/web/trilobite/Crassostrea_gigas_ensembl_tracks/Crassostrea_gigas.GCA_000297895.1.24.f: No such file or directory\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!head /Volumes/web/trilobite/Crassostrea_gigas_ensembl_tracks/Crassostrea_gigas.GCA_000297895.1.24.f"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
