--- a/OlyO/OlyOv4-fastqc.ipynb
+++ b/OlyO/OlyOv4-fastqc.ipynb
@@ -1,6 +1,49 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Running fastqc on raw files sent to Giles for reassembly\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "tldr\n",
+    "18 files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "http://owl.fish.washington.edu/halfshell/bu-data-genomic/tentacle/filtered_1000_GTGAAA_L004_R1_fastqc.html\n",
+    "http://owl.fish.washington.edu/halfshell/bu-data-genomic/tentacle/filtered_106A_Female_Mix_GATCAG_L004_R1_fastqc.html\n",
+    "http://owl.fish.washington.edu/halfshell/bu-data-genomic/tentacle/filtered_106A_Female_Mix_GATCAG_L004_R2_fastqc.html\n",
+    "http://owl.fish.washington.edu/halfshell/bu-data-genomic/tentacle/filtered_106A_Female_Mix_GATCAG_L007_R1_fastqc.html\n",
+    "http://owl.fish.washington.edu/halfshell/bu-data-genomic/tentacle/filtered_106A_Male_Mix_TAGCTT_L004_R1_fastqc.html\n",
+    "http://owl.fish.washington.edu/halfshell/bu-data-genomic/tentacle/filtered_106A_Male_Mix_TAGCTT_L004_R2_fastqc.html\n",
+    "http://owl.fish.washington.edu/halfshell/bu-data-genomic/tentacle/filtered_106A_Male_Mix_TAGCTT_L007_R1_fastqc.html\n",
+    "http://owl.fish.washington.edu/halfshell/bu-data-genomic/tentacle/filtered_108A_Female_Mix_GGCTAC_L004_R1_fastqc.html\n",
+    "http://owl.fish.washington.edu/halfshell/bu-data-genomic/tentacle/filtered_108A_Female_Mix_GGCTAC_L004_R2_fastqc.html\n",
+    "http://owl.fish.washington.edu/halfshell/bu-data-genomic/tentacle/filtered_108A_Female_Mix_GGCTAC_L007_R1_fastqc.html\n",
+    "http://owl.fish.washington.edu/halfshell/bu-data-genomic/tentacle/filtered_108A_Male_Mix_AGTCAA_L004_R1_fastqc.html\n",
+    "http://owl.fish.washington.edu/halfshell/bu-data-genomic/tentacle/filtered_108A_Male_Mix_AGTCAA_L004_R2_fastqc.html\n",
+    "http://owl.fish.washington.edu/halfshell/bu-data-genomic/tentacle/filtered_108A_Male_Mix_AGTCAA_L007_R1_fastqc.html\n",
+    "http://owl.fish.washington.edu/halfshell/bu-data-genomic/tentacle/filtered_1600_GTGGCC_L004_R1_fastqc.html\n",
+    "http://owl.fish.washington.edu/halfshell/bu-data-genomic/tentacle/filtered_2000_NoIndex_L007_R1_fastqc.html\n",
+    "http://owl.fish.washington.edu/halfshell/bu-data-genomic/tentacle/filtered_2200_GTTTCG_L004_R1_fastqc.html\n",
+    "http://owl.fish.washington.edu/halfshell/bu-data-genomic/tentacle/filtered_400_GTCCGC_L004_R1_fastqc.html\n",
+    "http://owl.fish.washington.edu/halfshell/bu-data-genomic/tentacle/filtered_400_NoIndex_L006_R1_fastqc.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
@@ -815,7 +858,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
