--- a/OlyO/OlyOv4_Assembly.ipynb
+++ b/OlyO/OlyOv4_Assembly.ipynb
@@ -116,6 +116,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">TR1|c0_g1_i1 len=489 path=[467:0-488] [-1, 467, -2]\r\n",
+      "GTTTTGACCAACGAGAGTCGGTACTGAAGATGATCACTTGAAATAAAATTAAATGATAAC\r\n",
+      "GTTTTCTTAAAACCCTTCATGTCGGCGTGATACATCCGTAGTTGAACGCCGTCACGAAAG\r\n",
+      "GTAAGCCAAAGGGGGGTGTTGCAGTCCATACCCACACGTATAATTTATTCCATAAATAGT\r\n",
+      "AGCAGCATAAAGCACACAATGATAATTTAAAATACGTTTCATTCACCAATGAATTAAGTA\r\n",
+      "AGAATTGGTGCTTTTCCCTAGGTCTATTTGTCTGATCTTTTGTATGTCTGTTTATTGCTA\r\n",
+      "AGTTGTTTGAGCCACCTCTTTTCCACACCTTATTTTGCTTACTCCTAGACACCTGATCCC\r\n",
+      "AACTCTGCTATATCCACAGGTCCGTGCATGCGCTACACTTAATATTGTATTTCTATGGGA\r\n",
+      "AACATTAGATAAATCACTGTTCATAAGAATAATGCTGTTTATATGTACAATGTACTTTCT\r\n",
+      "TAATAAAAC\r\n",
+      ">TR1|c1_g1_i1 len=430 path=[815:0-429] [-1, 815, -2]\r\n",
+      "GGCAAACACAGATCCCTGGACGCACTACAGGTGGGATCAGGTGTCTAGGAGTAAGTAGCC\r\n",
+      "CCTGTCGACAGGTTATATCCGCCGTGAGTCCCATATTTTGATCGGGTAAACGGAGCAATT\r\n",
+      "GTGATAAAAATTAGTATATACATGTATAGAACGGTCTAACAATTGCAATGAAACCCGTCA\r\n",
+      "GACAGCATTTGGTCCAATGGCGGGTTGTATTGGCAAACTAGATCTTTATAACGACCATAA\r\n",
+      "CATTTCCGAAATGTGGATATTAACCGAAACTGTAGAAACCCCTGTAACACCACCTTGTTT\r\n",
+      "GTCAGTAGCATGTCTCGACTTCAAACTAATCCTGCGCAGAACAAGCTCTTGCGTATTTAG\r\n",
+      "TACGTTTAGAGACATACACACCTTATGCGGGTAATGATGGAATATTGCTGCATGGGGGTG\r\n",
+      "GGAGGTTGAC\r\n",
+      ">TR2|c0_g1_i1 len=254 path=[497:0-145 498:146-163 499:164-253] [-1, 497, 498, 499, -2]\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!head -20 /Users/sr320/data-genomic/tentacle/OlyO-v4-transcriptome.fasta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "213990\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!fgrep -c \">\" /Users/sr320/data-genomic/tentacle/OlyO-v4-transcriptome.fasta"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
