--- a/OlyO/OlyOv5-QC.ipynb
+++ b/OlyO/OlyOv5-QC.ipynb
@@ -100,17 +100,21 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MD5 (filtered_1000_GTGAAA_L004_R1.fastq.gz) = d41d8cd98f00b204e9800998ecf8427e\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!md5 fi*"
+    "!md5 fi* > PostTransferMD5hashes.md5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!diff /Volumes/web-1/nightingales/O_lurida/checksums.md5 PostTransferMD5hashes.md5\n",
+    "\n"
    ]
   },
   {
