--- a/OlyO/OlyOv5-QC.ipynb
+++ b/OlyO/OlyOv5-QC.ipynb
@@ -96,116 +96,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "!md5 fi* > PostTransferMD5hashes.md5"
+    "%%bash\n",
+    "for i in fi*; do md5 $i >> PostTransferMD5hashes.md5; done"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MD5 (filtered_1000_GTGAAA_L004_R1.fastq.gz) = d41d8cd98f00b204e9800998ecf8427e\r\n",
-      "MD5 (filtered_106A_Female_Mix_GATCAG_L004_R1.fastq.gz) = 51866975b9eefe7b857b6438b999d3d0\r\n",
-      "MD5 (filtered_106A_Female_Mix_GATCAG_L004_R2.fastq.gz) = 7c60c85613b5f95c884fd5dbfe060306\r\n",
-      "MD5 (filtered_106A_Female_Mix_GATCAG_L007_R1.fastq.gz) = 390c9e51ba52176dbe23e1d2947c6339\r\n",
-      "MD5 (filtered_106A_Male_Mix_TAGCTT_L004_R1.fastq.gz) = d7255d5ca68f87baddc1b20304bb5654\r\n",
-      "MD5 (filtered_106A_Male_Mix_TAGCTT_L004_R2.fastq.gz) = 6311f82de95722b9ac76b67ba46d90c1\r\n",
-      "MD5 (filtered_106A_Male_Mix_TAGCTT_L007_R1.fastq.gz) = a4c46ad4eb42638c3306f0bced352322\r\n",
-      "MD5 (filtered_108A_Female_Mix_GGCTAC_L004_R1.fastq.gz) = 0782efb8381e6b914ce89158615f18c7\r\n",
-      "MD5 (filtered_108A_Female_Mix_GGCTAC_L004_R2.fastq.gz) = 5e1c8cce7314d2e4ea01230e8c5b4421\r\n",
-      "MD5 (filtered_108A_Female_Mix_GGCTAC_L007_R1.fastq.gz) = 37c11f15afff32bc57478c48cb3a4772\r\n",
-      "MD5 (filtered_108A_Male_Mix_AGTCAA_L004_R1.fastq.gz) = 9ddbc72c8152f86464ff7e66812ce7cc\r\n",
-      "MD5 (filtered_108A_Male_Mix_AGTCAA_L004_R2.fastq.gz) = 2f9aaf2d2bbee41908be9fcba0fa21d8\r\n",
-      "MD5 (filtered_108A_Male_Mix_AGTCAA_L007_R1.fastq.gz) = 940a0aca7ee0a7a167aded11c3658495\r\n",
-      "MD5 (filtered_1600_GTGGCC_L004_R1.fastq.gz) = d41d8cd98f00b204e9800998ecf8427e\r\n",
-      "MD5 (filtered_2000_NoIndex_L007_R1.fastq.gz) = d41d8cd98f00b204e9800998ecf8427e\r\n",
-      "MD5 (filtered_2200_GTTTCG_L004_R1.fastq.gz) = d41d8cd98f00b204e9800998ecf8427e\r\n",
-      "MD5 (filtered_400_GTCCGC_L004_R1.fastq.gz) = b462a8b5f55781ffcce105735a5c87c3\r\n",
-      "MD5 (filtered_400_NoIndex_L006_R1.fastq.gz) = 9686e4a27a308b9a5d595ca3170c1fac\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!cat PostTransferMD5hashes.md5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MD5 (filtered_1000_GTGAAA_L004_R1.fastq.gz) = 7217b5fa4354c20280fb5e3cbf1a9b3b\r\n",
-      "MD5 (filtered_106A_Female_Mix_GATCAG_L004_R1.fastq.gz) = 51866975b9eefe7b857b6438b999d3d0\r\n",
-      "MD5 (filtered_106A_Female_Mix_GATCAG_L004_R2.fastq.gz) = 7c60c85613b5f95c884fd5dbfe060306\r\n",
-      "MD5 (filtered_106A_Female_Mix_GATCAG_L007_R1.fastq.gz) = 390c9e51ba52176dbe23e1d2947c6339\r\n",
-      "MD5 (filtered_106A_Male_Mix_TAGCTT_L004_R1.fastq.gz) = d7255d5ca68f87baddc1b20304bb5654\r\n",
-      "MD5 (filtered_106A_Male_Mix_TAGCTT_L004_R2.fastq.gz) = 6311f82de95722b9ac76b67ba46d90c1\r\n",
-      "MD5 (filtered_106A_Male_Mix_TAGCTT_L007_R1.fastq.gz) = a4c46ad4eb42638c3306f0bced352322\r\n",
-      "MD5 (filtered_108A_Female_Mix_GGCTAC_L004_R1.fastq.gz) = 0782efb8381e6b914ce89158615f18c7\r\n",
-      "MD5 (filtered_108A_Female_Mix_GGCTAC_L004_R2.fastq.gz) = 5e1c8cce7314d2e4ea01230e8c5b4421\r\n",
-      "MD5 (filtered_108A_Female_Mix_GGCTAC_L007_R1.fastq.gz) = 37c11f15afff32bc57478c48cb3a4772\r\n",
-      "MD5 (filtered_108A_Male_Mix_AGTCAA_L004_R1.fastq.gz) = 9ddbc72c8152f86464ff7e66812ce7cc\r\n",
-      "MD5 (filtered_108A_Male_Mix_AGTCAA_L004_R2.fastq.gz) = 2f9aaf2d2bbee41908be9fcba0fa21d8\r\n",
-      "MD5 (filtered_108A_Male_Mix_AGTCAA_L007_R1.fastq.gz) = 940a0aca7ee0a7a167aded11c3658495\r\n",
-      "MD5 (filtered_1600_GTGGCC_L004_R1.fastq.gz) = a54bed5a92d616cc9db35bfd64406346\r\n",
-      "MD5 (filtered_2000_NoIndex_L007_R1.fastq.gz) = f934bd35a035fef8664b5e056b937f2e\r\n",
-      "MD5 (filtered_2200_GTTTCG_L004_R1.fastq.gz) = 3df87eae8d7a1672f8f7c7f91ad11ce3\r\n",
-      "MD5 (filtered_400_GTCCGC_L004_R1.fastq.gz) = b462a8b5f55781ffcce105735a5c87c3\r\n",
-      "MD5 (filtered_400_NoIndex_L006_R1.fastq.gz) = 9686e4a27a308b9a5d595ca3170c1fac\r\n",
-      "MD5 (m130619_081336_42134_c100525122550000001823081109281326_s1_p0.bas.h5.gz) = 4842624da6520268f6113687d685f6d7\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!cat /Volumes/web-1/nightingales/O_lurida/checksums.md5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1c1\r\n",
-      "< MD5 (filtered_1000_GTGAAA_L004_R1.fastq.gz) = 7217b5fa4354c20280fb5e3cbf1a9b3b\r\n",
-      "---\r\n",
-      "> MD5 (filtered_1000_GTGAAA_L004_R1.fastq.gz) = d41d8cd98f00b204e9800998ecf8427e\r\n",
-      "14,16c14,16\r\n",
-      "< MD5 (filtered_1600_GTGGCC_L004_R1.fastq.gz) = a54bed5a92d616cc9db35bfd64406346\r\n",
-      "< MD5 (filtered_2000_NoIndex_L007_R1.fastq.gz) = f934bd35a035fef8664b5e056b937f2e\r\n",
-      "< MD5 (filtered_2200_GTTTCG_L004_R1.fastq.gz) = 3df87eae8d7a1672f8f7c7f91ad11ce3\r\n",
-      "---\r\n",
-      "> MD5 (filtered_1600_GTGGCC_L004_R1.fastq.gz) = d41d8cd98f00b204e9800998ecf8427e\r\n",
-      "> MD5 (filtered_2000_NoIndex_L007_R1.fastq.gz) = d41d8cd98f00b204e9800998ecf8427e\r\n",
-      "> MD5 (filtered_2200_GTTTCG_L004_R1.fastq.gz) = d41d8cd98f00b204e9800998ecf8427e\r\n",
-      "19d18\r\n",
-      "< MD5 (m130619_081336_42134_c100525122550000001823081109281326_s1_p0.bas.h5.gz) = 4842624da6520268f6113687d685f6d7\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!diff /Volumes/web-1/nightingales/O_lurida/checksums.md5 PostTransferMD5hashes.md5\n",
     "\n"
