--- a/OlyO/OlyOv5-QC.ipynb
+++ b/OlyO/OlyOv5-QC.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -299,12 +299,112 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "@HWI-ST700693:263:C0K6DACXX:4:1101:1464:1969\r\n",
+      "NTTCATGAAGGGGTCAACCAGAATGATCTCGTAAAACTTGTAAGATGAATCCTGTGCCACCCAGTAAGAGCTTAGC\r\n",
+      "+\r\n",
+      "#4=DDDDDHFFHHGGABHIICBGH<E@FHIIGEGIIIIIIIDGGIIGEIIIIIIIIIIGIGGI9=D@CECEEF@CC\r\n",
+      "@HWI-ST700693:263:C0K6DACXX:4:1101:1506:1985\r\n",
+      "NCCTGATTGAAAACAAAATGTCTTTGTTTTTTCTACTTTGTATGGATCAATCAATCTTATTTGTTCCTGTAGAGAT\r\n",
+      "+\r\n",
+      "#1=DDFFFHHHHHJJJJJIGFHHJIIIIJJJJIIJIJJJJIJJFEGJIIIIHIGIJJEHIJJJGAGHJJIIIHGD;\r\n",
+      "@HWI-ST700693:263:C0K6DACXX:4:1101:1882:1979\r\n",
+      "NGGGACTCTAACGAGAACCTTCCGTCATCTGGCTCTGGACATAACCATGGTTAACAAGAACACTGTCATGGTGGAG\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!head R1.fastq"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No quality encoding type selected. Assuming that the data provided uses Sanger encoded Phred scores (default)\n",
+      "\n",
+      "Path to Cutadapt set as: '/Users/sr320/.local/bin/cutadapt' (user defined)\n",
+      "1.8.1\n",
+      "Cutadapt seems to be working fine (tested command '/Users/sr320/.local/bin/cutadapt --version')\n",
+      "\n",
+      "\n",
+      "AUTO-DETECTING ADAPTER TYPE\n",
+      "===========================\n",
+      "Attempting to auto-detect adapter type from the first 1 million sequences of the first file (>> R1.fastq <<)\n",
+      "\n",
+      "Found perfect matches for the following adapter sequences:\n",
+      "Adapter type\tCount\tSequence\tSequences analysed\tPercentage\n",
+      "Illumina\t5712\tAGATCGGAAGAGC\t1000000\t0.57\n",
+      "Nextera\t3\tCTGTCTCTTATA\t1000000\t0.00\n",
+      "smallRNA\t1\tATGGAATTCTCG\t1000000\t0.00\n",
+      "Using Illumina adapter for trimming (count: 5712). Second best hit was Nextera (count: 3)\n",
+      "\n",
+      "Writing report to 'R1.fastq_trimming_report.txt'\n",
+      "\n",
+      "SUMMARISING RUN PARAMETERS\n",
+      "==========================\n",
+      "Input filename: R1.fastq\n",
+      "Trimming mode: paired-end\n",
+      "Trim Galore version: 0.4.0\n",
+      "Cutadapt version: 1.8.1\n",
+      "Quality Phred score cutoff: 20\n",
+      "Quality encoding type selected: ASCII+33\n",
+      "Adapter sequence: 'AGATCGGAAGAGC' (Illumina TruSeq, Sanger iPCR; auto-detected)\n",
+      "Maximum trimming error rate: 0.1 (default)\n",
+      "Minimum required adapter overlap (stringency): 1 bp\n",
+      "Minimum required sequence length for both reads before a sequence pair gets removed: 20 bp\n",
+      "Length cut-off for read 1: 35 bp (default)\n",
+      "Length cut-off for read 2: 35 bb (default)\n",
+      "\n",
+      "Writing final adapter and quality trimmed output to R1_trimmed.fq\n",
+      "\n",
+      "\n",
+      "  >>> Now performing quality (cutoff 20) and adapter trimming in a single pass for the adapter sequence: 'AGATCGGAAGAGC' from file R1.fastq <<< \n",
+      "10000000 sequences processed\n",
+      "20000000 sequences processed\n",
+      "30000000 sequences processed\n",
+      "40000000 sequences processed\n",
+      "50000000 sequences processed\n"
+     ]
+    }
+   ],
+   "source": [
+    "!/Applications/bioinfo/trim_galore_zip/trim_galore \\\n",
+    "--paired \\\n",
+    "--retain_unpaired \\\n",
+    "--path_to_cutadapt /Users/sr320/.local/bin/cutadapt \\\n",
+    "R1.fastq \\\n",
+    "R2.fastq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "!/Applications/bioinfo/FastQC/fastqc \\\n",
+    "R1_val.fastq \\\n",
+    "-o /Users/sr320/data-genomic/tentacle/"
+   ]
   },
   {
    "cell_type": "code",
@@ -314,18 +414,19 @@
    },
    "outputs": [],
    "source": [
-    "# Paired folder\n",
-    "cat *_R2.fastq >> all.R2.fastq\n",
-    "cat filtered_106A_Female_Mix_GATCAG_L004_R1.fastq \\\n",
-    "    filtered_106A_Male_Mix_TAGCTT_L004_R1.fastq \\\n",
-    "    filtered_108A_Female_Mix_GGCTAC_L004_R1.fastq >> all.R1.fastq\n",
-    "\n",
-    "# Unpaired folder\n",
-    "cat *_R1.fastq >> tmp.R1.fastq\n",
-    "\n",
-    "# Then combining the two R1s\n",
-    "cat tmp.R1.fastq >> all.R1.fastq"
+    "!/Applications/bioinfo/FastQC/fastqc \\\n",
+    "R2_val.fastq \\\n",
+    "-o /Users/sr320/data-genomic/tentacle/"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
